채팅 인터페이스 구현 완료
카카오페이 api와 서버 연동 공부할 예정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:label="MainActivity">
         </activity>
 
@@ -33,6 +34,21 @@
         <activity
             android:name=".ViewQuest"
             android:label="ViewQuest">
+        </activity>
+
+        <activity
+            android:name=".ModifyUserInfo"
+            android:label="ModifyUserInfo">
+        </activity>
+
+        <activity
+            android:name=".CheckKakaoPay"
+            android:label="CheckKakaoPay">
+        </activity>
+
+        <activity
+            android:name=".ChatRoom"
+            android:label="ChatRoom">
         </activity>
 
         <meta-data
