--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,11 @@
         </activity>
 
         <activity
+            android:name=".PayProcess"
+            android:label="PayProcess">
+        </activity>
+
+        <activity
             android:name=".ChatRoom"
             android:label="ChatRoom">
         </activity>
