--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"
+        <activity android:name=".Activity.LoginActivity"
             android:noHistory="true">
 
             <intent-filter>
@@ -24,37 +24,37 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:label="MainActivity">
         </activity>
 
         <activity
-            android:name=".AddQuest"
+            android:name=".Activity.AddQuest"
             android:label="AddQuest">
         </activity>
 
         <activity
-            android:name=".ViewQuest"
+            android:name=".Activity.ViewQuest"
             android:label="ViewQuest">
         </activity>
 
         <activity
-            android:name=".ModifyUserInfo"
+            android:name=".Activity.ModifyUserInfo"
             android:label="ModifyUserInfo">
         </activity>
 
         <activity
-            android:name=".CheckKakaoPay"
+            android:name=".Activity.CheckKakaoPay"
             android:label="CheckKakaoPay">
         </activity>
 
         <activity
-            android:name=".PayProcess"
+            android:name=".Activity.PayProcess"
             android:label="PayProcess">
         </activity>
 
         <activity
-            android:name=".ChatRoom"
+            android:name=".Activity.ChatRoom"
             android:label="ChatRoom">
         </activity>
 
