--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
             android:label="AddQuest">
         </activity>
 
+        <activity android:name=".Activity.AddPositionActivity"
+            android:label="AddPositionActivity">
+        </activity>
+
         <activity
             android:name=".Activity.ViewQuest"
             android:label="ViewQuest">
